--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,12 @@ DISCORD_CLIENT_ID=your_discord_client_id
 DISCORD_GUILD_ID=your_discord_server_id
 
 # Uygulama Ayarları
-APP_ENV=development # development veya production 
+APP_ENV=development # development veya production
+
+# API Anahtarları
+OMDB_API_KEY=your_omdb_api_key_here
+
+# Uygulama Ayarları
+APP_TITLE=NextToWatch
+APP_DESCRIPTION=Dizi, Film ve Anime İzleme Takibi
+APP_VERSION=1.0.0 
