--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ajv": "^8.17.1",
     "ajv-formats": "^2.1.1",
     "atomically": "^1.7.0",
+    "axios": "^1.8.4",
     "boolean": "^3.2.0",
     "buffer-crc32": "^0.2.13",
     "cacheable-lookup": "^5.0.4",
@@ -20,6 +21,7 @@
     "define-properties": "^1.2.1",
     "detect-node": "^2.1.0",
     "dot-prop": "^6.0.1",
+    "dotenv": "^16.5.0",
     "electron-store": "^8.2.0",
     "end-of-stream": "^1.4.4",
     "env-paths": "^2.2.1",
